# academy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json
libs/: CMakeLists.txt  imgui_config.h
src/: CMakeLists.txt  main.cpp
src/editor/: asset_browser.cpp  asset_editor.cpp  asset_editor.hpp  camera_controller.cpp  camera_controller.hpp  console.cpp  console.hpp  editor.cpp  editor.hpp  editor_scene.cpp  editor_scene.hpp  file_browser.cpp  file_browser.hpp  gui.cpp  gui.hpp  pose_widget.cpp  pose_widget.hpp  resource_editor.cpp  resource_editor.hpp  widget_system.cpp  widget_system.hpp
src/game/: file_cache.cpp  file_cache.hpp  frame_timer.cpp  frame_timer.hpp  game_display.cpp  game_display.hpp  game_file.cpp  game_file.hpp  game_scene.cpp  game_scene.hpp  h_impl.cpp  input.cpp  input.hpp  process_launch.cpp  process_launch.hpp  server_client_shared.hpp  terminal_console.hpp
src/game/client/: client.cpp  client.hpp  main.cpp
src/game/server/: main.cpp  server.cpp  server.hpp
src/renderer/: CMakeLists.txt  camera.cpp  camera.hpp  draw_functions.cpp  draw_functions.hpp  frame_timer.cpp  gpu_asset_cache.cpp  gpu_asset_cache.hpp  image.hpp  light.hpp  render_scene.cpp  render_scene.hpp  renderable.cpp  renderable.hpp  renderer.cpp  renderer.hpp  samplers.hpp  utils.hpp  vertex.cpp  vertex.hpp  viewport.cpp  viewport.hpp
src/renderer/assets/: asset_loader.cpp  asset_loader.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_asset.cpp  mesh_asset.hpp  model.cpp  model.hpp  particles.cpp  particles.hpp  skeleton.cpp  skeleton.hpp  texture.cpp  texture.hpp  texture_asset.cpp  texture_asset.hpp
src/shaders/: include.glsli  post_process.comp  standard_3d.vert  voxelization.frag  voxelization.vert  widget.vert
